--- a/php/DockerFile
+++ b/php/DockerFile
@@ -1,3 +1,4 @@
-FROM php:8.1-fpm-alpine
+FROM php:8.2-apache
 
-RUN docker-php-ext-install pdo pdo_mysql
+RUN apt-get update && apt-get install -y \
+    && docker-php-ext-install pdo pdo_mysql
